--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "1531920330";
+    var serviceWorkerVersion = "321841";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
